
---

## **pyproject.toml**

```toml
[project]
name = "orim"
version = "1.0.0"
description = "Image foreground extraction using OpenCV and PyQt6"
authors = [
    { name = "Hyeongseok Son", email = "ct9692@naver.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10.8"

[tool.poetry.dependencies]
python = "^3.10.8"
opencv-python-headless = "^4.8.0"
PyQt6 = "^6.5.1"
numpy = "^1.24.3"

[tool.poetry.scripts]
orim = "orim:main"